# rede

./: .gitignore  __main__.py  api.py  app.py  bootstrap.py  example.env  log.py  pyproject.toml  readme.md  rede.py  requirements.txt  rotina.py  sankhya.py  setup.py
src/rede/: app.py  main.py
src/rede/controllers/: api.py
src/rede/database/: database.py  models.py
src/rede/services/: rede.py  rotina.py  sankhya.py  scheduler.py  token.py
src/rede/utils/: log.py
